--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "homepage": "https://Anton1919.github.io/samurai-way",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.11",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
     "antd": "4.18.7",
     "axios": "0.26.0",
     "classnames": "2.3.1",
-    "formik": "2.2.9",
+    "formik": "^2.2.9",
     "gh-pages": "3.2.3",
     "jest": "27.5.1",
     "react": "17.0.2",
